# chess_engine_2

./: .gitignore  CMakeLists.txt
chess_engine_Cpp_2/: Board.cpp  BoardRecord.h  BoardState.h  CMakeLists.txt  Defs.h  Engine.cpp  Engine.h  MoveGenerator.cpp  MoveGenerator.h  PieceType.h  StaticEval.h
chess_engine_Cpp_2/magic_numbers_generation/: CMakeLists.txt  generate_magic_numbers.cpp
engine/: Board.cpp  Board.h  BoardRecord.h  CMakeLists.txt  Color.h  Engine.cpp  Engine.h  MoveGenerator.cpp  MoveGenerator.h  MoveType.h  StaticEval.cpp  StaticEval.h  TimeManagement.cpp  TimeManagement.h  magic_numbers.cpp
engine/magic_numbers_generation/: CMakeLists.txt  magic_numbers_dummy.cpp
tests/: CMakeLists.txt  draw_by_repetition_test_cases.txt  ethereal_fen_set.fen  ethereal_fen_set_perft_results.txt  generate_perft_results.py  main.cpp  perft_tests.cpp  perft_tests.h  run_perft_tests.cpp  run_unit_tests.cpp  unit_tests.cpp  unit_tests.h
uci/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt  Utils.cpp  Utils.h
